Commit before add filtering method